// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic 1`] = `
"<template>
  <div class=\\"vmark\\"><h1>hello</h1>
<counter :start=\\"0\\" /></div>
</template>

"
`;

exports[`with tags 1`] = `
"<template>
  <div class=\\"vmark\\"><div class=\\"foo\\">{{ foo }}</div>
</div>
</template>

<style scoped>
.foo {
  color: red;
}
</style>"
`;

exports[`wrap html 1`] = `
"<template>
  <foo><h1>hello</h1>
</foo>
</template>

"
`;
